; ModuleID = '/home/carl/AnghaBench/systemd/src/shared/extr_format-table.c_table_get_at.c'
source_filename = "/home/carl/AnghaBench/systemd/src/shared/extr_format-table.c_table_get_at.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @table_get_at(i32* %0, i64 %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i64, i64* %6, align 8
  %11 = load i64, i64* %7, align 8
  %12 = call i32* @table_get_cell(i32* %9, i64 %10, i64 %11)
  store i32* %12, i32** %8, align 8
  %13 = load i32*, i32** %8, align 8
  %14 = icmp ne i32* %13, null
  br i1 %14, label %16, label %15

15:                                               ; preds = %3
  store i8* null, i8** %4, align 8
  br label %20

16:                                               ; preds = %3
  %17 = load i32*, i32** %5, align 8
  %18 = load i32*, i32** %8, align 8
  %19 = call i8* @table_get(i32* %17, i32* %18)
  store i8* %19, i8** %4, align 8
  br label %20

20:                                               ; preds = %16, %15
  %21 = load i8*, i8** %4, align 8
  ret i8* %21
}

declare dso_local i32* @table_get_cell(i32*, i64, i64) #1

declare dso_local i8* @table_get(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
